# dataflow

./: .env.local  .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
app/ETCDV3/api/: api.js
app/ETCDV3/portal/: index.html
application/: __init__.py
application/auth/: api.py
application/db/: etcdv3.db  main.sql
application/etcdv3/: api.py  config.py  service.py
application/test/: api.py  config.py  service.py  test.py
application/test/a/: __init__.py
application/user/: api.py  service.py
conf/: application-dev.yaml  application.yaml  logback.yaml
conf/sql/: userMapper.xml
dataflow/: boot.py  main.py
dataflow/application/config/: test.py
dataflow/application/test/: test.py
dataflow/application/user/: api.py
dataflow/chain/: langfuse.py
dataflow/module/: __init__.py
dataflow/module/chain/: langfuse.py
dataflow/module/context/: __init__.py  datasource.py  kafka.py  langfuse.py  metrics.py  milvus.py  pybatisplus.py  redis.py  web.py
dataflow/module/embedding/: vector.py
dataflow/router/: endpoint.py
dataflow/utils/: antpath.py  asgi.py  config.py  dbtools_mysql.py  log.py  logtools.py  redistools.py  reflect.py  schedule.py  sign.py  thread.py  utils.py
dataflow/utils/context/: context.py
dataflow/utils/dbtools/: milvus.py  minio.py  mysql.py  pybatis.py  pydbc.py  redis.py
dataflow/utils/embedding/: vector.py
dataflow/utils/llm/: vector.py
dataflow/utils/mq/: kafka.py
dataflow/utils/trace/: langfuse.py
docs/: index.md
docs/getting-started/: getting-started.md
testsuite/: pybatisplusT.py
(+6 files in other folders)
